replace webpack dev server to webpack dev+hot middleware with express

--- a/index.ejs
+++ b/index.ejs
@@ -9,5 +9,8 @@
             uk-height-viewport="expand: true">
             <router-view></router-view>
         </div>
+        <% if (htmlWebpackPlugin.options.env === "development") { %>
+            <script type="text/javascript" src="/reload/reload.js"></script>
+        <% } %>
     </body>
 </html>
