--- a/index.ejs
+++ b/index.ejs
@@ -5,7 +5,7 @@
         <title>Cognitive Solution Dashboard</title>
     </head>
     <body>
-        <div id="app" class="uk-container uk-margin-top uk-margin-bottom uk-flex"
+        <div id="app" class="uk-section uk-padding-remove-vertical uk-flex"
             uk-height-viewport="expand: true">
             <router-view></router-view>
             <locale-select :locale.sync="locale"></locale-select>
