remove mongo container name from docker compose file and update project title

--- a/index.ejs
+++ b/index.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Cognitive Solution Dashboard</title>
+        <title>Video Insight</title>
     </head>
     <body>
         <div id="app" class="uk-section uk-padding-remove-vertical uk-flex"
